<resources>
    <string name="app_name">RUB-SE-LAB-22A15</string>
    <string name="tvAccelerometerText">tvAccelerometer</string>
    <string name="btnClearAccelerometerDatabaseText">Clear Accelerometer Database</string>
    <string name="swAccelerometerActivatedText">Accelerometer Activated</string>
    <string name="btnOpenAccelerometerTestText">Open Accelerometer Test</string>
    <string name="tvAwakeText">Awake</string>
    <string name="tvEnergeticText">Energetic</string>
    <string name="tvRelaxedText">Relaxed</string>
    <string name="tvWellText">Well</string>
    <string name="tvCalmText">Calm</string>
    <string name="tvSatisfiedText">Satisfied</string>
    <string name="btnSurveySaveText">Save Survey</string>
    <string name="btnSurveyClearText">Clear Survey</string>
    <string name="btnOpenSurveyTestText">Open Survey Test</string>
    <string name="btnExportText">Export</string>
    <string name="btnExportActivityText">Export</string>
    <string name="msgExportError">Something went wrong</string>
    <string name="researcherEmail">esat.bayhan@rub.de</string>
    <string name="btmNavSettingsLabel">Settings</string>
    <string name="btmNavActivityLabel">Activity</string>
    <string name="btmNavExportLabel">Export</string>
    <string name="btmNavHomeLabel">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnExportDatabaseText">Export Database</string>
    <string name="textInputLayoutActivityRecordActiveRecordingNameHint">Activity</string>
    <string name="switchActivityRecordActiveRecordingLocationText">Enable Location?</string>
    <string name="buttonActivityRecordActiveRecordingStartText">Start</string>
    <string name="buttonActivityRecordActiveRecordingStopText">Stop</string>
    <string name="btnPauseActivity">Pause</string>
    <string name="btnResumeActivity">Resume</string>
    <string name="alertSaveActivityMessage">Do you want to save your recorded activity?</string>
    <string name="alertSaveActivityNegative">DISCARD</string>
    <string name="alertSaveActivityPositive">SAVE</string>
    <string name="channelActivityRecordTitle">Activity Recording</string>
    <string name="channelActivityRecordText">Recording Activity</string>
    <string name="channelActivityRecordActionStopTitle">STOP</string>
    <string name="toastActivityFragmentStartError">Enter Activity Name</string>
    <string name="preferenceScreenLanguageTitle">Language</string>
    <string name="preferenceScreenLanguageSummary">Select your preferred language.</string>
    <string name="preferencesScreenBatteryTitle">Battery Consumption &amp; Accuracy</string>
    <string name="preferenceScreenBatterySummary">Select your preferred battery consumption option.</string>
    <string name="preferenceScreenSurveyTitle">Survey Schedule</string>
    <string name="preferenceScreenSurveySummary">When do you want to be notified for a new survey?</string>
    <string name="preferenceScreenUploadTitle">Upload Database</string>
    <string name="preferenceScreenUploadSummary">Upload research data to researcher</string>
    <string name="preferenceScreenUpload">preferenceUpload</string>
    <string name="preferenceScreenSurvey">preferenceSurvey</string>
    <string name="preferenceScreenBattery">preferenceBattery</string>
    <string name="preferenceScreenLanguage">preferenceLanguage</string>
    <string name="toastPreferenceUploadSuccess">Uploaded database successfully</string>
    <string name="toastPreferenceUploadFailure">Upload failed try later again</string>
    <string name="textViewSurveyMoodTitleText">in the last 24 hours i felt…</string>
    <string name="textViewSurveyMoodSatisfiedPositiveText">satisfied</string>
    <string name="textViewSurveyMoodSatisfiedNegativeText">dissatisfied</string>
    <string name="textViewSurveyMoodCalmPositiveText">calm</string>
    <string name="textViewSurveyMoodCalmNegativeText">restless</string>
    <string name="textViewSurveyMoodWellPositiveText">well</string>
    <string name="textViewSurveyMoodWellNegativeText">unwell</string>
    <string name="textViewSurveyMoodRelaxedPositiveText">relaxed</string>
    <string name="textViewSurveyMoodRelaxedNegativeText">tense</string>
    <string name="textViewSurveyMoodEnergeticNegativeText">powerless</string>
    <string name="textViewSurveyMoodEnergeticPositiveText">energetic</string>
    <string name="textViewSurveyMoodAwakePositiveText">awake</string>
    <string name="textViewSurveyMoodAwakeNegativeText">tired</string>
    <string name="stringSurveyResultNeutral">neutral</string>
    <string name="textViewSurveyEventAppraisalNegativeQuestionText">Have you experienced one or more negative events since the last query?\nHow intense was the most significant negative event?</string>
    <string name="textViewSurveyEventAppraisalFromText">0</string>
    <string name="textViewSurveyEventAppraisalFromTo">100</string>
    <string name="textViewSurveyEventAppraisalPositiveQuestionText">Have you experienced one or more positive events since the last query?\nHow intense was the most important positive event?</string>
    <string name="stringSurveyEventAppraisalLowIntenseText">low</string>
    <string name="stringSurveyEventAppraisalHighIntenseText">high</string>
    <string name="textViewSurveySelfWorthPositiveQuestionText">For now I\'m happy with myself</string>
    <string name="textViewSurveySelfWorthNegativeQuestionText">Right now I consider myself a failure</string>
    <string name="textViewSurveySelfWorthNegativeLabelText">strongly disagree</string>
    <string name="textViewSurveySelfWorthPositiveLabelText">That is completely right</string>
    <string name="textViewSurveyImpulsivenessActedOnImpulseQuestionText">Since the last query, I have acted on impulse, i.e. I have acted without thinking about possible consequences</string>
    <string name="stringStronglyDisagree">strongly disagree</string>
    <string name="stringThatIsCompletelyRight">that is completely right</string>
    <string name="textViewSurveyImpulsivenessActedAggressiveQuestionText">Since the last query, I have behaved angrily or aggressively toward another person which I was sorry for afterwards</string>
    <string name="exposedDropdownMenuSurveySocialContextLocationHint">Location</string>
    <string name="textViewSurveySocialContextLocationQuestionText">Where are you now?</string>
    <string name="textViewSurveySocialContextAloneQuestionText">Are you alone at the moment?</string>
    <string name="stringNo">No</string>
    <string name="stringYes">Yes</string>
    <string name="textViewSurveySocialContextSurroundedQuestionText">What kind of people are you surrounded by at the moment</string>
    <string name="exposedDropdownMenuSurveySocialContextSurroundedHint">Surrounded</string>
    <string name="textViewSurveySocialContextSurroundedLikeQuestionText">When you think of the people you are surrounded, how does the following statement apply? I do not like these people!</string>
    <string name="stringDoesNotApplyAtAll">does not apply at all</string>
    <string name="stringIsCompletelyTrue">is completely true</string>
    <string name="textViewSurveyNoteTitleText">If you want you can add a note to your record</string>
    <string name="stringClear">Clear</string>
    <string name="editTextSurveyNoteHint">Note</string>
    <string name="stringBack">Back</string>
    <string name="stringNext">Next</string>
    <string name="stringSave">Save</string>
    <string name="alertSurveySaveDialog">Do you want to save your survey?</string>
    <string name="stringDecline">Decline</string>
    <string name="stringCardViewSurveyTitle">Survey</string>
    <string name="stringRemindLater">Remind Later</string>
    <string name="stringStart">Start</string>
    <string name="stringCardViewSurveySupportingText">It is time for a new survey to keep track of your mood.</string>
    <string name="stringDiscard">Discard</string>
    <string name="stringActivityRecordPermissionText">We need permissions to gps if you want to use it while recording an activity</string>
    <string name="stringCancel">Cancel</string>
    <string name="stringOkay">Okay</string>
    <string name="stringSurveyDiscardTitle">Why do you want to discard the survey?</string>
    <string name="stringCardViewAddActivityTitle">Add Activity</string>
    <string name="stringCardViewAddActivitySupportingText">Add here an already finished activity</string>
    <string name="buttonAddRecordSelectTimeText">Select Time</string>
    <string name="textInputLayoutActivityRecordAddRecordNameHelperText">Which activity do you want to add?</string>
    <string name="stringActivityRecordActiveRecordingTitle">Active Activity Recording</string>
    <string name="textInputLayoutActivityRecordActiveRecordingHelperText">Which activity do you want to track?</string>
    <string name="textInputLayoutAddRecordDatetimeHint">Date</string>
    <string name="textInputLayoutActivityRecordAddRecordDateHelperText">When was your activity you want to add?</string>
    <string name="toastActivityRecordAddRecordSaveDateMissing">Date missing</string>
    <string name="toastActivityRecordAddRecordSaveActivityMissing">Error: Activity Name Missing</string>
    <string name="stringSaved">Saved</string>
    <string name="stringSurvey">Survey</string>
    <string name="periodicNotificationText">It would be great if you have a little bit time for a new survey</string>
    <string name="preferenceScreenDeleteSummary">Delete all recorded data</string>
    <string name="preferenceScreenDeleteTitle">Delete Data</string>
    <string name="preferenceScreenPassiveRecordingSummary">Consider enabling passive recording for a better result</string>
    <string name="preferenceScreenPassiveRecordingTitle">Passive Recording</string>
    <string name="alertPreferencesDeleteTitle">Delete Data</string>
    <string name="alertPreferencesDeleteMessage">Are you really sure you want to delete all recorded data? This can not be undone.</string>
    <string name="stringDelete">Delete</string>
    <string name="toastPreferencesDeleteText">All data deleted</string>
    <string name="toastPreferenceDeleteAbortText">Please stop your active activity recording first.</string>
    <string name="stringSelectDate">Select Date</string>
    <string name="stringPrivacyPolicy">Privacy Policy</string>
</resources>