<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:defaultValue="english"
        app:entries="@array/preferenceScreenLanguageEntries"
        app:entryValues="@array/preferenceScreenLanguageValues"
        app:icon="@drawable/ic_baseline_language_24"
        app:key="LANGUAGE"
        app:summary="@string/preferenceScreenLanguageSummary"
        app:title="@string/preferenceScreenLanguageTitle"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="0"
        app:entries="@array/BATTERY_MODE_ENTRIES"
        app:entryValues="@array/BATTERY_MODE_VALUES"
        app:icon="@drawable/ic_baseline_battery_saver_24"
        app:key="BATTERY"
        app:summary="@string/preferenceScreenBatterySummary"
        app:title="@string/preferencesScreenBatteryTitle"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="12"
        app:entries="@array/preferenceScreenSurveyEntries"
        app:entryValues="@array/preferenceScreenSurveyValues"
        app:icon="@drawable/ic_baseline_poll_24"
        app:key="SURVEY"
        app:summary="@string/preferenceScreenSurveySummary"
        app:title="@string/preferenceScreenSurveyTitle"
        app:useSimpleSummaryProvider="true" />

    <Preference
        app:icon="@drawable/ic_baseline_send_24"
        app:key="UPLOAD"
        app:summary="@string/preferenceScreenUploadSummary"
        app:title="@string/preferenceScreenUploadTitle" />


</PreferenceScreen>