<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/btmNavHome"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/btmNavHomeLabel"/>

    <item
        android:id="@+id/btmNavActivity"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_directions_run_24"
        android:title="@string/btmNavActivityLabel"/>

    <item
        android:id="@+id/btmNavExport"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_send_24"
        android:title="@string/btmNavExportLabel"/>

    <item
        android:id="@+id/btmNavSettings"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/btmNavSettingsLabel"/>
</menu>