<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".fragments.SurveySocialContextFragment">

    <!--Location Question-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewSurveySocialContextLocationQuestionText"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/exposedDropdownMenuSurveySocialContextLocation"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exposedDropdownMenuSurveySocialContextLocationHint"
        app:startIconDrawable="@drawable/ic_baseline_add_location_24">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextViewSurveySocialContextLocation"
            android:labelFor="@id/exposedDropdownMenuSurveySocialContextLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Alone Question-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewSurveySocialContextAloneQuestionText"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <RadioGroup
        android:id="@+id/radioGroupSurveySocialContextAlone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonSurveySocialContextAloneNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stringNo"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonSurveySocialContextAloneYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stringYes" />
    </RadioGroup>

    <!--Surrounded Question-->
    <TextView
        android:id="@+id/textViewSurveySocialContextSurroundedQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewSurveySocialContextSurroundedQuestionText"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/exposedDropdownMenuSurveySocialContextSurrounded"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exposedDropdownMenuSurveySocialContextSurroundedHint"
        app:startIconDrawable="@drawable/ic_baseline_people_24" >

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextViewSurveySocialContextSurrounded"
            android:labelFor="@id/exposedDropdownMenuSurveySocialContextSurrounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Surrounded Like Question-->
    <TextView
        android:id="@+id/textViewSurveySocialContextSurroundedLikeQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewSurveySocialContextSurroundedLikeQuestionText"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:id="@+id/linearLayoutSurveySocialContextSurroundedLikeLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stringDoesNotApplyAtAll"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/stringIsCompletelyTrue" />
    </LinearLayout>

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderSurveySocialContextSurroundedLike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:thumbRadius="0dp" />

</LinearLayout>