<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SurveyTestActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSatisfied"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvSatisfiedText" />

            <SeekBar
                android:id="@+id/sbSatisfied"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:max="100"
                android:progress="0" />

            <TextView
                android:id="@+id/tvCalm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvCalmText" />

            <SeekBar
                android:id="@+id/sbCalm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:max="100"
                android:progress="0" />

            <TextView
                android:id="@+id/tvWell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvWellText" />

            <SeekBar
                android:id="@+id/sbWell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:max="100"
                android:progress="0" />

            <TextView
                android:id="@+id/tvRelaxed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvRelaxedText" />

            <SeekBar
                android:id="@+id/sbRelaxed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:max="100"
                android:progress="0" />

            <TextView
                android:id="@+id/tvEnergetic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvEnergeticText" />

            <SeekBar
                android:id="@+id/sbEnergetic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:max="100"
                android:progress="0" />

            <TextView
                android:id="@+id/tvAwake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tvAwakeText" />

            <SeekBar
                android:id="@+id/sbAwake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:max="100"
                android:progress="0" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSurveySave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSurveySaveText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSurveyClear"
        app:layout_constraintTop_toTopOf="@+id/btnSurveyClear" />

    <Button
        android:id="@+id/btnSurveyClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSurveyClearText"
        app:layout_constraintEnd_toStartOf="@+id/btnSurveySave"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
</androidx.constraintlayout.widget.ConstraintLayout>