<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="0dp"
    app:strokeColor="@color/design_default_color_primary"
    app:strokeWidth="1dp">

    <LinearLayout
        android:id="@+id/linearLayoutActivityRecordActiveRecording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!--Title-->
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringActivityRecordActiveRecordingTitle"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <!--Text Edit-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutActivityRecordActiveRecording"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/textInputLayoutActivityRecordActiveRecordingNameHint"
            app:helperText="@string/textInputLayoutActivityRecordActiveRecordingHelperText"
            app:startIconDrawable="@drawable/ic_baseline_directions_run_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEditActivityRecordActiveRecording"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Location Switch-->
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchActivityRecordActiveRecordingLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/switchActivityRecordActiveRecordingLocationText" />

        <Chronometer
            android:id="@+id/chronometerActivityRecordActiveRecording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:countDown="false"
            android:gravity="center" />

        <!--Start Stop Buttons-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonActivityRecordActiveRecordingStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/buttonActivityRecordActiveRecordingStartText"
                app:icon="@drawable/ic_baseline_not_started_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonActivityRecordActiveRecordingStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/buttonActivityRecordActiveRecordingStopText"
                app:icon="@drawable/ic_baseline_stop_circle_24"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>