<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".fragments.SurveyNoteFragment">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/textViewSurveyNoteTitleText" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/editTextSurveyNoteHint"
        app:startIconDrawable="@drawable/ic_baseline_sticky_note_2_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSurveyNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="64dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSurveyNoteClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringClear" />

</LinearLayout>