<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccelerometerTestActivity">

    <TextView
        android:id="@+id/tvAccelerometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvAccelerometerText"
        app:layout_constraintBottom_toTopOf="@+id/btnAccelerometerClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAccelerometerClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnClearAccelerometerDatabaseText"
        app:layout_constraintBottom_toTopOf="@+id/swAccelerometerActivated"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccelerometer" />

    <Switch
        android:id="@+id/swAccelerometerActivated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swAccelerometerActivatedText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAccelerometerClear" />
</androidx.constraintlayout.widget.ConstraintLayout>